--- a/formcopy2.html
+++ b/formcopy2.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/form.css">
-    <link rel="stylesheet" href="styles/formcopygreenr.css">
+    <link rel="stylesheet" href="styles/formcopygreeny.css">
 
 
 
