--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="styles/navbargreenr.css">
+  <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/index.css">
 
 </head>
