--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,13 +16,15 @@
 
   <!-- Optional styles and scripts of your own -->
   <link rel="stylesheet" href="styles/help.css">
-<style>
-  #dustinPP {
-    width: 10%;
-    border-radius: 100%;
-    border: 3px solid black;
-  }
-</style>
+  <link rel="stylesheet" href="styles/aboutUs.css">
+
+  <style>
+    #dustinPP {
+      width: 10%;
+      border-radius: 100%;
+      border: 3px solid black;
+    }
+  </style>
 </head>
 
 <body>
@@ -65,29 +67,51 @@
   <header>
     <h1>About us..</h1>
   </header>
-  <div>
+  <div id="mission">
     <h2>Our Mission..</h2>
-  </div>
-  <div>
     <p>"At BESTRIDE we strive to enhance the lives of our customers, and provide them with the best RideShare experience
       possible. We believe in the positive environmental impact that RideShares can have, and are proud to be involved
       in making this planet a better place for the next generations."
     </p>
-    <h2>Safety Concerns</h2>
-    <p>During these unprecendented we know that the number one priority is safety.  Safety for our customers, and also the drivers of the companies that we compare.  We ask that everyone follows the local guidelines set in place by the local health authority.  Thank you for looking out for your fellow humans.</p>
-    <div id="teamContainer">
-    <h2>Our Team</h2>
-    <div><img src="/images/dustinpp.jpg" id="dustinPP"></div>
-    <p>Arunab Singh</p>
-    <p>Arunab is a co-founder and senior developer here at BESTRIDE. He is a bright driven young man who brings knowledge, energy and hardwork to the team.  brings almost no experience to the team.  We are glad to have him helping steer our company in the best direction.</p>
-    <div><img src="/images/dustinpp.jpg" id="dustinPP"></div>
-    <p>Dustin Lott</p>
-    <p>Dustin is one of our senior developers here at BESTRIDE.  He is one of the cofounders of the company, and brings almost no experience to the table.  We are excited to see where his career will go from here.</p>  
   </div>
+  <div id="concerns">
+    <h2>Safety Concerns</h2>
+    <p>During these unprecendented we know that the number one priority is safety. Safety for our customers, and also
+      the drivers of the companies that we compare. We ask that everyone follows the local guidelines set in place by
+      the local health authority. Thank you for looking out for your fellow humans.</p>
+  </div>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <h2>Our Team</h2>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="profile-pictures" src="images/dustinpp.jpg" alt="Dustinn Jott Profile Picture">
+            <div class="card-body">
+              <h1 id="title1" class="card-text">Dustin Jott</h1>
+              <p id="desc1" class="card-text">Dustin is a co-founder and senior developer here at BESTRIDE. He is a
+                bright driven young man who brings knowledge, energy and hardwork to the team. brings almost no
+                experience to the team. We are glad to have him helping steer our company in the best direction.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="profile-pictures" src="images/Arunabpp.JPG" alt="Dustinn Jott Profile Picture">
+            <div class="card-body">
+              <h1 id="title2" class="card-text">Arunab Singh</h1>
+              <p id="desc2" class="card-text">Arunab is a co-founder and senior developer here at BESTRIDE. He is a
+                bright driven young man who brings knowledge, energy and hardwork to the team. brings almost no
+                experience to the team. We are glad to have him helping steer our company in the best direction.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-    </div>
-    <h2>Contact us</h2>
+
+  <h2>Contact us</h2>
   </div>
   <div id="contents">
     <p>hi</p>
