--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="styles/navbar.css">
 
   <!-- Optional styles and scripts of your own -->
-  <link rel="stylesheet" href="styles/help.css">
   <link rel="stylesheet" href="styles/aboutUs.css">
 
   <style>
@@ -65,8 +64,9 @@
   <!-- HelpPage starts here -->
 
   <header>
-    <h1>About us..</h1>
+    <h1>About Us</h1>
   </header>
+  <div id="mainContent">
   <div id="mission">
     <h2>Our Mission..</h2>
     <p>"At BESTRIDE we strive to enhance the lives of our customers, and provide them with the best RideShare experience
@@ -82,27 +82,25 @@
   </div>
   <div class="album py-5 bg-light">
     <div class="container">
-      <h2>Our Team</h2>
+      <h2 id="team">Our Team</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
-        <div class="col">
+        <div class="col teamMember">
           <div class="card shadow-sm">
-            <img class="profile-pictures" src="images/dustinpp.jpg" alt="Dustinn Jott Profile Picture">
+            <img class="profile-pictures" src="images/dustinpp.jpg" alt="Dustin Lott Profile Picture">
             <div class="card-body">
               <h1 id="title1" class="card-text">Dustin Jott</h1>
-              <p id="desc1" class="card-text">Dustin is a co-founder and senior developer here at BESTRIDE. He is a
-                bright driven young man who brings knowledge, energy and hardwork to the team. brings almost no
-                experience to the team. We are glad to have him helping steer our company in the best direction.</p>
+              <p id="desc1" class="card-text">Dustin is a co-founder and senior developer here at BESTRIDE. A recent BCIT recruit, he is a
+                warm positive young man who brings many intangibles to the team. In his spare time he enjoys comedy, art, and technology.  We are glad to have him helping steer our company in the best direction.</p>
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col teamMember">
           <div class="card shadow-sm">
-            <img class="profile-pictures" src="images/Arunabpp.JPG" alt="Dustinn Jott Profile Picture">
+            <img class="profile-pictures" src="images/Arunabpp.JPG" alt="Arunab Singh Profile Picture">
             <div class="card-body">
               <h1 id="title2" class="card-text">Arunab Singh</h1>
               <p id="desc2" class="card-text">Arunab is a co-founder and senior developer here at BESTRIDE. He is a
-                bright driven young man who brings knowledge, energy and hardwork to the team. brings almost no
-                experience to the team. We are glad to have him helping steer our company in the best direction.</p>
+                bright driven young man who brings knowledge, energy and hardwork to the team. We are glad to have him helping steer our company in the best direction.</p>
             </div>
           </div>
         </div>
@@ -110,12 +108,16 @@
     </div>
   </div>
 
-
-  <h2>Contact us</h2>
+  <div id="contact">
+  <h2 id="contactTitle">Contact us</h2>
+  <div id="contactinfo">
+    <p><i>Email Address:</i> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp customerservice@bestride.ca</p>
+    <p><i>Telephone Number:</i> &nbsp &nbsp (604)-547-8357</i></p>
+    <p><i>Fax Number:</i> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp (604)-548-8357</p>
+    <p><i>Mailing address:</i> &nbsp &nbsp &nbsp &nbsp &nbsp 8357 Best St, V8J2K9, Vancouver, BC, Canada</p>
   </div>
-  <div id="contents">
-    <p>hi</p>
-  </div>
+</div>
+</div>
 
 
   <!-- Footer Code -->
