--- a/profile.html
+++ b/profile.html
@@ -60,9 +60,9 @@
   </nav>
   
   <div id = "profile">
-      <h1 id = "name">Name: <span id="userName">arunab</span></h1>
-      <div id = "email">Email: <span id="userEmail">arun@arunab.com</span></div>
-      <h3 id = "previous">Previous Searches</h3>
+      <div id = "name">Name: <span id="userName"></span></div>
+      <div id = "email">Email: <span id="userEmail"></span></div><br>
+      <span id = "previous">Previous Searches</span>
       <div id="Searches"></div>
   </div>
 
