--- a/results.html
+++ b/results.html
@@ -65,7 +65,7 @@
       <div class="contain1">
         <!-- <div class="enter"> -->
           <div class="reenter">
-            <button onclick="goBack()"><i class="fa fa-arrow-left" aria-hidden="true"></i>Re-Enter Locations</button>
+            <button onclick="goBack()"><i class="fa fa-arrow-left" aria-hidden="true"></i><span id = "full-screen-text">Re-Enter Locations</span></button>
           </div><br>
           <p>From: <span id="start"></span></p><br>
           <p>To: <span id="finish">BCIT</span></p><br>
@@ -329,7 +329,7 @@
         <p id="type1"></p>
         <p>Price: $<span id="uberPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#uberModal"> Reviews </a>
-          <button href="company1.html">Get App</button></div>
+          <button class = "end-button" href="/uber.com">Get App</button></div>
       </div>
       <div class="listOpt comp2">
         <div id = "lyft-color">LYFT</div>
@@ -337,7 +337,7 @@
         <p id="type2"></p>
         <p>Price: $<span id="lyftPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#lyftModal"> Reviews </a>
-          <button href="company1.html">Get App</button></div>
+          <button class = "end-button" href="/lyft.com">Get App</button></div>
       </div>
       <div class="listOpt comp3">
         <div id = "evo-color">EVO</div>
@@ -345,7 +345,7 @@
         <p id="type3"></p>
         <p>Price: $<span id="evoPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#evoModal"> Reviews </a>
-          <button href="company1.html">Get App</button></div>
+          <button class = "end-button" href="/evo.com">Get App</button></div>
       </div>
       <div class="listOpt comp4">
         <div id = "modo-color">MODO</div>
@@ -353,7 +353,7 @@
         <p id="type4"></p>
         <p>Price: $<span id="modoPrice"></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#modoModal"> Reviews </a>
-          <button href="company1.html">Get App</button></div>
+          <button class = "end-button" href="/modo.com">Get App</button></div>
       </div>
     </div>
   </div>
